src/main/java/com/example/green/global/error/exception/ExceptionMessage.java
package com.example.green.global.error.exception;

import org.springframework.http.HttpStatus;

public interface ExceptionMessage {

	HttpStatus getHttpStatus();

	String getMessage();
}
